--- a/package.json
+++ b/package.json
@@ -30,29 +30,28 @@
   },
   "dependencies": {
     "fhir-works-on-aws-interface": "^11.1.0",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.20"
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.19",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/lodash": "^4.14.161",
-    "@types/node": "^12",
-    "@types/shuffle-array": "^1.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
+    "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/lodash": "^4.17.13",
+    "@types/node": "^22.9.0",
+    "@types/shuffle-array": "^1.0.5",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@typescript-eslint/parser": "^8.13.0",
+    "eslint": "^9.14.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^26.6.3",
-    "jest-mock-extended": "^1.0.8",
-    "prettier": "^2.4.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "jest": "^29.7.0",
+    "jest-mock-extended": "^4.0.0-beta1",
+    "prettier": "^3.3.3",
     "shuffle-array": "^1.0.1",
-    "standard-version": "^9.3.2",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3"
+    "standard-version": "^9.5.0",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.6.3"
   },
   "resolutions": {
     "xml2js": "^0.5.0"
@@ -70,9 +69,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/awslabs/fhir-works-on-aws-authz-rbac.git"
+    "url": "git://github.com/ascentms/fhir-works-on-aws-authz-rbac.git"
   },
   "engines": {
     "node": ">=12.0.0"
-  }
+  },
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
